--- a/COURSE_ASH/Resources/Styles/Images.xaml
+++ b/COURSE_ASH/Resources/Styles/Images.xaml
@@ -3,18 +3,11 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              >
-    <Style x:Key="LogoutImageStyle" TargetType="Image">
-        <Setter Property="Source" Value="{AppThemeBinding Dark=logout_light,Light=logout_dark}"/>
+    <Style x:Key="CatalogNavBarImage" TargetType="Image">
         <Setter Property="Margin" Value="12"/>
-        <Setter Property="HorizontalOptions" Value="StartAndExpand"/>
         <Setter Property="VerticalOptions" Value="Center"/>
         <Setter Property="HeightRequest" Value="{AppThemeBinding Light=40,Dark=35}"/>
         <Setter Property="WidthRequest" Value="40"/>
-    </Style>
-
-    <Style x:Key="LoginImageStyle" TargetType="Image" BasedOn="{StaticResource LogoutImageStyle}">
-        <Setter Property="Source" Value="{AppThemeBinding Dark=login_light, Light=login_dark}"/>
-        <Setter Property="HorizontalOptions" Value="EndAndExpand"/>
     </Style>
 
     <Style x:Key="CatalogImageStyle" TargetType="Image">
